@@ -1,3 +1,8 @@
+2008-05-02  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-scan.c: 
+	Main scanning module migrated to Gio
+
 2008-05-02  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab.c:
